@@ -8,29 +8,16 @@ android:
 sudo: false
 env:
   global:
+    # github token
     - secure: "mMIHz+I2pZK7I9PvhkTIRDeXJJIZTwigAamHnaId1q9YO7LvBoCKsJCI7pepbK303lTZJqkTgyTti9xSsYjzMIIMT8G+YBfVqoiy6wWOZjwjjZxn5Mw7g3qxRRdpXCc7B7hBBTEiEzC0Bp3QwPQtwdFDlACwgHWsbDLiaweIglg="
+    # coverity token
     - secure: "bbT3Swvy1P0vFgXE5E5Iv9+JU8GG4LZlbwLez2B7s0aOuxEFCnj19M+GAldVAeHCc/z/0Oz+N1p4eRU5OCJY71lZqv5F8ph8ahti7uUylbfoNHM7g1mcmVSNFZ5bgVhnz/RQjEK/o5msqv3UZPRPS023Q5vAbCrftuHOiOiBbCo="
-    - secure: "XWFKXfdJAAScNMQxg6jmJKKfuWIkKBHD8GpLfFoOjghHS6GS7dnc22rHdxeU3wmDMW4sZsFtmDXk5ZjJ3XdbGLFiz5dJ4HKqSmPBG1SMnFco2fDAEyZRN3dh1f2iANX9azyP8fA8mQGITa1uqP20JUFbAcaPcuhNYfiWfqxwzIs="
-    - secure: "SJuhq8rTzyJ/947QZZwsIIKtZ9ridf48SvpraK770CCz0hOaqBD3SFLgb2qj9vQDIzHMHST6v0RQ8gP5WaCBC73GFDuH/cY5ltq6KG8kE/5t01dbFWG7o6ItG4FVF2YDo69J+msrB/RP27HK3gGwCqj+6xz+7y1z9VIBBQQEg0k="
-    - secure: "Cq3lvXwHxmjuJH6Q+NkfGqtJL8pwN8NH5wQdPIAQuglLI5mh8mZDKbdBYpKlDvKF5NQOKqUneqFpLD/NWG/3Jwx2DzG619x0yXuCju/Gtxn4tLGO8vjbYH/WnE+uSYwibbOrm/4BGNU+nHTFU6Q/gVBeB5rV58GJohKcs+yPY/M="
-before_install:
-  - cd $HOME
-  # install and initialise build-trend scripts
-  - if [[ -d buildtime-trend/.git ]]; then cd buildtime-trend; git pull; cd ..; else git clone --recursive https://github.com/buildtimetrend/python-client.git buildtime-trend; fi
-  - source buildtime-trend/init.sh
-  # return to directory where the repository being built has been copied on the worker.
-  - cd $TRAVIS_BUILD_DIR
 script:
-  - timestamp.sh test
   - ./gradlew clean assemble
 after_success:
   # update javadoc on Github Pages (gh-pages)
-  - timestamp.sh update_javadoc
   - ./gradlew generateJavadoc
   - .utility/copy-javadoc-to-gh-pages.sh
-after_script:
-    # analyse build timestamps
-  - timestamp.sh end
 addons:
   coverity_scan:
     project:
@@ -40,8 +27,3 @@ addons:
     #build_command_prepend:
     build_command: ./gradlew clean assemble
     branch_pattern: coverity_scan
-notifications:
-  webhooks:
-    # parse Travis CI log and send result to Keen.io, using Builtime Trend Service
-    - https://buildtimetrend.herokuapp.com/travis
-    - https://buildtimetrend-dev.herokuapp.com/travis
